# SFMLBoxTest

./: CMakeLists.txt
include/: platform.h  platformer_character.h  utility.h
src/: main.cpp  platform.cpp  platformer_character.cpp
